updated public folder

--- a/public/ai/mnist/index.html
+++ b/public/ai/mnist/index.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MNIST</title>
-    <link rel="shortcut icon" href="../../../styles/imagenes/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../libraries/style.css">
-    <!-- <link rel="stylesheet" href="../libraries/style.css"> -->
-</head>
-<body>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-            font-size: 30px;
-            font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-        }
-        button{
-            border-radius: 5;
-            font-size: 20px;
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-    </style>
-
+      * {
+        margin: 0;
+        padding: 0;
+        font-size: 30px;
+        font-weight: bold;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+      }
     
-<canvas></canvas>
-<p></p>
-<div></div>
-<button> Errase </button>
-<!-- <di></p> -->
-    <script src="../../libraries/ndv2.min.js"></script>
-    <!-- <script src="../../libraries/matrix.js"></script> -->
-    <!-- <script src="../../libraries/neuralNetwork.js"></script> -->
-    <script src="../../libraries/functions.js"></script>
-    <!-- <script type="module" src="../../libraries/nd2.js"></script> -->
-    <!-- <script type="module" src="./nd.js"></script> -->
-    <script src="trainedModel.js"></script>
-    <!-- <script src="mnist.js"></script> -->
-    <script src="main.js" defer></script>
-</body>
+      button {
+        border-radius: 5;
+        font-size: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+    </style>
+    <script type="module" crossorigin src="./assets/index.js"></script>
+  </head>
+  <body>
+    <canvas></canvas>
+    <p></p>
+    <div></div>
+    <button> Errase </button>
+    
+  </body>
 </html>
