--- a/public/particle/boids/index.html
+++ b/public/particle/boids/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:image" content="boids.png">
-    <link rel="stylesheet" href="../../libraries/style.css">
-    
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boids</title>
-</head>
-<body>
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        box-sizing: border-box;
+      }
+    </style>
+    <script type="module" crossorigin src="./assets/index.a5422b02.js"></script>
+  </head>
+  <body>
     <canvas></canvas>
-
-    <script src="../../libraries/vectors.js"></script>
-    <script src="../../libraries/functions.js"></script>
-    <script src="chaser.js"></script>
-    <script src="boids.js"></script>
-    <script src="main.js"></script>
-</body>
+    
+  </body>
 </html>
