--- a/public/particle/circular/index.html
+++ b/public/particle/circular/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tesseract</title>
+    <title>Circular Motion</title>
     <style>
       *{
         margin: 0;
         padding: 0;
         overflow: hidden;
+        box-sizing: border-box;
       }
     </style>
-    <script type="module" crossorigin src="./assets/index.2ff402f4.js"></script>
+    <script type="module" crossorigin src="./assets/index.6365e2dc.js"></script>
   </head>
   <body>
     <canvas></canvas>
