--- a/public/ai/xor/index.html
+++ b/public/ai/xor/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:image" content="xor.jpg">
-    <link rel="shortcut icon" href="../../../styles/imagenes/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../libraries/style.css">
-    <title>Xor</title>
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        * {
-            justify-content: center;
-            font-size: 100px;
-        }
+      *{
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
     </style>
+    <title>Xor</title>
+    <script type="module" crossorigin src="./assets/index.js"></script>
+  </head>
+  <body>
     <canvas></canvas>
-    <script src="../../libraries/nd.min.js"></script>
-    <script src="../../libraries/functions.js"></script>
-    <!-- <script type="module" src="nd.js"></script> -->
-    <!-- <script type="module" src="../../libraries/nd.js"></script> -->
-
-    <script src="main.js" defer></script>
-</body>
-
+    
+  </body>
 </html>
