--- a/public/math/sineWave/index.html
+++ b/public/math/sineWave/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tesseract</title>
+    <title>Sine Wave</title>
     <style>
       *{
         margin: 0;
@@ -11,7 +11,7 @@
         overflow: hidden;
       }
     </style>
-    <script type="module" crossorigin src="./assets/index.2ff402f4.js"></script>
+    <script type="module" crossorigin src="./assets/index.5a662adf.js"></script>
   </head>
   <body>
     <canvas></canvas>
