--- a/public/render/rayMarching/index.html
+++ b/public/render/rayMarching/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ray Casting</title>
+  <title>Ray Marching</title>
   <style>
     * {
       margin: 0;
@@ -12,7 +12,7 @@
       overflow: hidden;
     }
   </style>
-  <script type="module" crossorigin src="./assets/index.e8b80271.js"></script>
+  <script type="module" crossorigin src="./assets/index.a0a57674.js"></script>
 </head>
 
 <body>
